Fix U.S. spacing

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -72,6 +72,18 @@ body {
   background-color: $base-lightest;
 }
 
+.code-container {
+  max-width: 75%;
+  overflow-x: auto;
+}
+
+.code-container pre {
+  max-width: 100%;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
 .container, .container-with-sidenav {
   margin: 0 auto;
   padding: 3em 30px 6em;
